Fix cut off overflow

--- a/assets/bs-override.scss
+++ b/assets/bs-override.scss
@@ -45,6 +45,7 @@
 
 .reading-width{
   max-width: 800px;
+  width: 100%;
 }
 
 
